--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     },
     "dependencies": {
         "@aero/centra": "^1.0.6",
+        "@interactjs/actions": "^1.10.11",
+        "@interactjs/interact": "^1.10.11",
         "@rollup/plugin-json": "^4.1.0",
         "body-parser": "^1.19.0",
         "compression": "^1.7.1",
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "interactjs": "^1.10.11",
+        "jquery": "^3.6.0",
         "node-fetch": "^2.6.1",
         "sirv": "^1.0.0",
         "universal-cookie-express": "^4.0.3"
